feat(html, css): layout blog page

--- a/collection.html
+++ b/collection.html
@@ -65,6 +65,7 @@
 
     <!-- Collection Section -->
     
+    <main class="main-section">
     <section class="collection-section">
         <div class="collection-intro container">
             <img class="img-fluid" src="http://via.placeholder.com/200x200/5b686b">
@@ -147,32 +148,34 @@
 
     <!-- Collection Project Posts-->
 
-    <section class="container portfolio-posts">
-        <div class="row">
-            <div class="col-sm-12">
-                <h6>Related Posts</h6>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-sm-12 col-md-6 col-lg-4">
-                <img class="img-fluid" src="http://via.placeholder.com/550x400">
-                <div class="collection-post-text">
-                    <h3><a href="#">Title of Post</a></h3>
-                    <p>adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</p>
+    <section class="portfolio-posts">
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-12">
+                    <h6>Related Posts</h6>
                 </div>
             </div>
-            <div class="col-sm-12 col-md-6 col-lg-4">
-                <img class="img-fluid" src="http://via.placeholder.com/550x400">
-                <div class="collection-post-text">
-                    <h3><a href="#">Title of Post</a></h3>
-                    <p>adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</p>
+            <div class="row">
+                <div class="col-sm-12 col-md-6 col-lg-4">
+                    <img class="img-fluid" src="http://via.placeholder.com/550x400">
+                    <div class="collection-post-text">
+                        <h3><a href="#">Title of Post</a></h3>
+                        <p>adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</p>
+                    </div>
                 </div>
-            </div>
-            <div class="col-sm-12 post-md-hidden col-lg-4">
-                <img class="img-fluid" src="http://via.placeholder.com/550x400">
-                <div class="collection-post-text">
-                    <h3><a href="#">Title of Post</a></h3>
-                    <p>adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</p>
+                <div class="col-sm-12 col-md-6 col-lg-4">
+                    <img class="img-fluid" src="http://via.placeholder.com/550x400">
+                    <div class="collection-post-text">
+                        <h3><a href="#">Title of Post</a></h3>
+                        <p>adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</p>
+                    </div>
+                </div>
+                <div class="col-sm-12 post-md-hidden col-lg-4">
+                    <img class="img-fluid" src="http://via.placeholder.com/550x400">
+                    <div class="collection-post-text">
+                        <h3><a href="#">Title of Post</a></h3>
+                        <p>adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</p>
+                    </div>
                 </div>
             </div>
         </div>
@@ -180,66 +183,69 @@
 
     <!-- Bibliography-->
 
-    <section class="container bibliography">
-        <!-- Accordion Menu-->
-        <div class="myAcc container">
-            <div class="row">
-                <div class="col-sm-12 col-lg-3">
-                    <h5>Collection Bibliography</h5>
-                </div>
-                <div class="col-sm-12 offset-lg-1 col-lg-7">
-                    <div class="card-header portfolio-snippets">
-                        <div>
-                            <a data-toggle="collapse" data-parent="#myAcc" href="#c1">
-                                <h6 class="card-p">Bibliography Entry</h6>
-                            </a>
+    <section class="bibliography">
+        <div class="container">
+            <!-- Accordion Menu-->
+            <div class="myAcc container">
+                <div class="row">
+                    <div class="col-sm-12 col-lg-3 offset-lg-1">
+                        <h5>Collection Bibliography</h5>
+                    </div>
+                    <div class="col-sm-12 col-lg-7 offset-lg-1">
+                        <div class="card-header portfolio-snippets">
+                            <div>
+                                <a data-toggle="collapse" data-parent="#myAcc" href="#c1">
+                                    <h6 class="card-p">Bibliography Entry</h6>
+                                </a>
+                            </div>
                         </div>
-                    </div>
-                    <div id="c1" class="collapse">
-                        <div class="card-block">
-                            <p>Supported Initiative with a very extensively long name</p>
-                        </div> 
-                    </div>
-                    <div class="card-header portfolio-snippets">
-                        <div>
-                            <a data-toggle="collapse" data-parent="#myAcc" href="#c2">
-                                <h6 class="card-p">Bibliography Entry</h6>
-                            </a>
+                        <div id="c1" class="collapse">
+                            <div class="card-block">
+                                <p>Supported Initiative with a very extensively long name</p>
+                            </div> 
                         </div>
-                    </div>
-                    <div id="c2" class="collapse">
-                        <div class="card-block">
-                            <p>Supported Initiative with a very extensively long name</p>
-                        </div> 
-                    </div>
-                    <div class="card-header portfolio-snippets">
-                        <div>
-                            <a data-toggle="collapse" data-parent="#myAcc" href="#c3">
-                                <h6 class="card-p">Bibliography Entry</h6>
-                            </a>
+                        <div class="card-header portfolio-snippets">
+                            <div>
+                                <a data-toggle="collapse" data-parent="#myAcc" href="#c2">
+                                    <h6 class="card-p">Bibliography Entry</h6>
+                                </a>
+                            </div>
                         </div>
-                    </div>
-                    <div id="c3" class="collapse">
-                        <div class="card-block">
-                            <p>Supported Initiative with a very extensively long name</p>
-                        </div> 
-                    </div>
-                    <div class="card-header portfolio-snippets">
-                        <div>
-                            <a data-toggle="collapse" data-parent="#myAcc" href="#c4">
-                                <h6 class="card-p">Bibliography Entry</h6>
-                            </a>
+                        <div id="c2" class="collapse">
+                            <div class="card-block">
+                                <p>Supported Initiative with a very extensively long name</p>
+                            </div> 
                         </div>
-                    </div>
-                    <div id="c4" class="collapse">
-                        <div class="card-block">
-                            <p>Supported Initiative with a very extensively long name</p>
-                        </div> 
+                        <div class="card-header portfolio-snippets">
+                            <div>
+                                <a data-toggle="collapse" data-parent="#myAcc" href="#c3">
+                                    <h6 class="card-p">Bibliography Entry</h6>
+                                </a>
+                            </div>
+                        </div>
+                        <div id="c3" class="collapse">
+                            <div class="card-block">
+                                <p>Supported Initiative with a very extensively long name</p>
+                            </div> 
+                        </div>
+                        <div class="card-header portfolio-snippets">
+                            <div>
+                                <a data-toggle="collapse" data-parent="#myAcc" href="#c4">
+                                    <h6 class="card-p">Bibliography Entry</h6>
+                                </a>
+                            </div>
+                        </div>
+                        <div id="c4" class="collapse">
+                            <div class="card-block">
+                                <p>Supported Initiative with a very extensively long name</p>
+                            </div> 
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
     </section>
+    </main>
 
     <!-- Footer -->
 
