--- a/index.html
+++ b/index.html
@@ -64,7 +64,8 @@
     </nav>
 
     <!-- Jumbotron-->
-
+    
+    <main class="main-section">
     <div class="jumbotron">
       <h2 class="introduction">Introductory blurb sentence goes here. <br>
       All about Gwen, why and how in one handy dandy sentence or two here.</h2>
@@ -283,18 +284,21 @@
 
     <!-- About Gwen -->
 
-    <section class="container about">
-        <div class="row">
-            <div class="col-sm-12 col-md-6">
-                <img class="img-fluid img-circle" src="http://via.placeholder.com/200x200">
-            </div>
-            <div class="col-sm-12 col-md-6">
-                <h2>About Gwen</h2>
-                <p>I am an eco-artist, a chronicler of the natural world. I believe making art that calls forth the viewer’s deepest memories connected with water, land, sky, and forest is my highest calling.</p>  
-                <p>After receiving my BFA, I lived and worked for many years in the Canadian Arctic. My artic paintings focused on the microcosmic world of the tundra underfoot, that place of tiny beauties. Now, as a resident of both Ontario and Nova Scotia I am interested in trees and water and especially borderlands – the liminal zone that is the water’s edge, the forest-field ecotone – places that shift and change and are neither one thing nor the other.</p>
+    <section class="about">
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-12 col-md-6">
+                    <img class="img-fluid img-circle" src="http://via.placeholder.com/200x200">
+                </div>
+                <div class="col-sm-12 col-md-6">
+                    <h2>About Gwen</h2>
+                    <p>I am an eco-artist, a chronicler of the natural world. I believe making art that calls forth the viewer’s deepest memories connected with water, land, sky, and forest is my highest calling.</p>  
+                    <p>After receiving my BFA, I lived and worked for many years in the Canadian Arctic. My artic paintings focused on the microcosmic world of the tundra underfoot, that place of tiny beauties. Now, as a resident of both Ontario and Nova Scotia I am interested in trees and water and especially borderlands – the liminal zone that is the water’s edge, the forest-field ecotone – places that shift and change and are neither one thing nor the other.</p>
+                </div>
             </div>
         </div>
     </section>
+    </main>
 
     <!-- Footer -->
 
