--- a/blog.html
+++ b/blog.html
@@ -65,6 +65,7 @@
 
     <!-- Blog Section -->
     
+    <main class="main-section">
     <section class="collection-section">
         <div class="collection-intro container">
             <img class="img-fluid" src="http://via.placeholder.com/200x200/5b686b">
@@ -79,27 +80,38 @@
     <section class="blog-posts">
         <div class="container">
             <div class="row">
-                <div class="col-sm-12">
+                <div class="col-sm-12 col-md-3">
                     <img class="img-fluid" src="http://via.placeholder.com/200x200/5b686b">
+                </div>
+                <div class="col-sm-12 col-md-8">
                     <h6 class="blog-post-date">01.05.17</h6>
-                    <h6>Blog Post Title</h6>
+                    <a href="index.html"><h6>Blog Post Title</h6></a>
                     <h3>Maecenas faucibus mols interm. Sed posuere consectetur est…</h3>
                 </div>
-                <div class="col-sm-12">
+            </div>
+            <div class="row">
+                <div class="col-sm-12 col-md-3">
                     <img class="img-fluid" src="http://via.placeholder.com/200x200/5b686b">
+                </div>
+                <div class="col-sm-12 col-md-8">
                     <h6 class="blog-post-date">01.05.17</h6>
-                    <h6>Blog Post Title</h6>
+                    <a href="index.html"><h6>Blog Post Title</h6></a>
                     <h3>Maecenas faucibus mols interm. Sed posuere consectetur est…</h3>
                 </div>
-                <div class="col-sm-12">
+            </div>
+            <div class="row">
+                <div class="col-sm-12 col-md-3">
                     <img class="img-fluid" src="http://via.placeholder.com/200x200/5b686b">
+                </div>
+                <div class="col-sm-12 col-md-8">
                     <h6 class="blog-post-date">01.05.17</h6>
-                    <h6>Blog Post Title</h6>
+                    <a href="index.html"><h6>Blog Post Title</h6></a>
                     <h3>Maecenas faucibus mols interm. Sed posuere consectetur est…</h3>
                 </div>
             </div>
         </div>
     </section>
+    </main>
 
     <!-- Footer -->
 
