feat(html, css): create blog post page

--- a/blog-post.html
+++ b/blog-post.html
@@ -68,45 +68,84 @@
     <main class="main-section">
     <section class="collection-section">
         <div class="collection-intro container">
-            <img class="img-fluid" src="http://via.placeholder.com/200x200/5b686b">
-            <span class="blog-title-border"></span>
-            <h5>Gwen's Blog</h5>
-            <h2>Introductory sentence to the blog of Gwen Frankton</h2>
+            <div class="row">
+                <div class="col-sm-12 col-md-3">
+                    <img class="img-fluid" src="http://via.placeholder.com/200x200/5b686b">
+                </div>
+                <div class="col-sm-12 col-md-8">
+                    <h6 class="blog-post-date">01.05.17</h6>
+                    <h2>Blog Post Title</h2>
+                </div>
+            </div>
         </div>
     </section>
 
     <!-- Blog Posts -->
 
-    <section class="blog-posts">
+    <section class="blog-post">
         <div class="container">
             <div class="row">
-                <div class="col-sm-12 col-md-3">
-                    <img class="img-fluid" src="http://via.placeholder.com/200x200/5b686b">
-                </div>
-                <div class="col-sm-12 col-md-8">
-                    <h6 class="blog-post-date">01.05.17</h6>
-                    <a href="blog-post.html"><h6>Blog Post Title</h6></a>
-                    <h3>Maecenas faucibus mols interm. Sed posuere consectetur est…</h3>
+                <div class="col-sm-12">
+                    <p>Maecenas faucibus mollis interdum. Sed posuere consectetur est at lobortis. Sed posuere consectetur est at lobortis. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Donec sed odio dui. Nullam quis risus eget urna mollis ornare vel eu leo. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                 </div>
             </div>
             <div class="row">
-                <div class="col-sm-12 col-md-3">
-                    <img class="img-fluid" src="http://via.placeholder.com/200x200/5b686b">
+                <div class="col-sm-12 col-md-6 margin-bottom-half">
+                    <img class="img-fluid" src="http://via.placeholder.com/600x350/5b686b">
                 </div>
-                <div class="col-sm-12 col-md-8">
-                    <h6 class="blog-post-date">01.05.17</h6>
-                    <a href="blog-post.html"><h6>Blog Post Title</h6></a>
-                    <h3>Maecenas faucibus mols interm. Sed posuere consectetur est…</h3>
+                <div class="col-sm-12 col-md-6">
+                    <img class="img-fluid" src="http://via.placeholder.com/600x350/5b686b">
                 </div>
             </div>
             <div class="row">
-                <div class="col-sm-12 col-md-3">
-                    <img class="img-fluid" src="http://via.placeholder.com/200x200/5b686b">
+                <div class="col-sm-12">
+                    <p>Maecenas faucibus mollis interdum. Sed posuere consectetur est at lobortis. Sed posuere consectetur est at lobortis. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Donec sed odio dui. Nullam quis risus eget urna mollis ornare vel eu leo. Lorem ipsum dolor sit amet, consectetur adipiscing elit.Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</p>
+                    <p>Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi.</p>
                 </div>
-                <div class="col-sm-12 col-md-8">
-                    <h6 class="blog-post-date">01.05.17</h6>
-                    <a href="blog-post.html"><h6>Blog Post Title</h6></a>
-                    <h3>Maecenas faucibus mols interm. Sed posuere consectetur est…</h3>
+            </div>
+            <div class="row">
+                <div class="col-sm-12">
+                    <img class="img-fluid" src="http://via.placeholder.com/1450x350/5b686b">
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-12">
+                    <p>Lorem ipsum dolor sit amet, cons ectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Related Blog Posts -->
+
+    <section class="portfolio-posts">
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-12">
+                    <h6>Related Posts</h6>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-12 col-md-6 col-lg-4">
+                    <img class="img-fluid" src="http://via.placeholder.com/550x400">
+                    <div class="collection-post-text">
+                        <h3><a href="#">Title of Post</a></h3>
+                        <p>adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</p>
+                    </div>
+                </div>
+                <div class="col-sm-12 col-md-6 col-lg-4">
+                    <img class="img-fluid" src="http://via.placeholder.com/550x400">
+                    <div class="collection-post-text">
+                        <h3><a href="#">Title of Post</a></h3>
+                        <p>adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</p>
+                    </div>
+                </div>
+                <div class="col-sm-12 post-md-hidden col-lg-4">
+                    <img class="img-fluid" src="http://via.placeholder.com/550x400">
+                    <div class="collection-post-text">
+                        <h3><a href="#">Title of Post</a></h3>
+                        <p>adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</p>
+                    </div>
                 </div>
             </div>
         </div>
