style(html, css): layout responsive blog post title with image

--- a/blog-post.html
+++ b/blog-post.html
@@ -66,7 +66,7 @@
     <!-- Blog Section -->
     
     <main class="main-section">
-    <section class="collection-section">
+    <section class="collection-section blog-post-title">
         <div class="collection-intro container">
             <div class="row">
                 <div class="col-sm-12 col-md-3">
